# MaxFlash

./: Readme.md  install
benchmark/matrix/: mathworks-10  mathworks-11  mathworks-12  mathworks-13  mathworks-14  mathworks-2  mathworks-3  mathworks-4  mathworks-5  mathworks-6  mathworks-7  mathworks-8  mathworks-9  stackoverflow-10  stackoverflow-11  stackoverflow-12  stackoverflow-13  stackoverflow-14  stackoverflow-15  stackoverflow-16  stackoverflow-17  stackoverflow-18  stackoverflow-19  stackoverflow-2  stackoverflow-20  stackoverflow-21  stackoverflow-22  stackoverflow-23  stackoverflow-24  stackoverflow-25  stackoverflow-3  stackoverflow-4  stackoverflow-5  stackoverflow-6  stackoverflow-7  stackoverflow-8  stackoverflow-9
run/: matrix1-result.csv  run_benchmark  run_exp  string1-result.csv  train_model
run/result_cache/: matrix1-memory.pkl  matrix1-time.pkl  string1-memory.pkl  string1-time.pkl
src/: CMakeLists.txt
src/basic/: config.cpp  config.h  context.cpp  context.h  data.h  program.cpp  program.h  semantics.cpp  semantics.h  semantics_factory.cpp  semantics_factory.h  specification.cpp  specification.h  util.cpp  util.h  value.h
src/main/: run.cpp
src/main/test/: test_matrix
src/matrix/: matrix_operator.cpp  matrix_operator.h
src/parser/: specification_parser.cpp  specification_parser.h
src/parser/python/: main.py
src/solver/: context_maintainer.cpp  context_maintainer.h  minimal_context_graph.cpp  minimal_context_graph.h  solver.cpp  solver.h
src/train/model/: model_matrix.json  model_string.json
src/train/python/: main.py
